<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="800dp"
    android:layout_height="1280dp"
    android:orientation="vertical">

    <View
        android:id="@+id/titleBoxBackground"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/title_bar" />

    <TextView
        android:id="@+id/mainMenuTitle"
        android:layout_width="680dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/title_bar"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:padding="25dp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/suited_and_booted_logo" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainMenuTitle"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:paddingHorizontal="10dp"
        android:text="@string/username"
        android:textSize="30sp" />

    <View
        android:id="@+id/usernameTextBack"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/username"
        android:layout_marginHorizontal="20dp"
        android:background="@color/grey" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="758dp"
        android:layout_height="46dp"
        android:layout_below="@id/username"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:text="@string/username_text"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameTextBack"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:paddingHorizontal="10dp"
        android:text="@string/password"
        android:textSize="30sp" />

    <View
        android:id="@+id/passwordTextBack"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/password"
        android:layout_marginHorizontal="20dp"
        android:background="@color/grey" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="758dp"
        android:layout_height="46dp"
        android:layout_below="@id/password"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:text="@string/password_text"
        android:textSize="25sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_below="@id/passwordTextBack"
        android:layout_marginTop="80dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        android:background="@color/button_dark"
        android:text="@string/login_button"
        android:textSize="25sp"
        android:textColor="@color/white"/>

</RelativeLayout>