<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="800dp"
    android:layout_height="1280dp"
    android:orientation="vertical">

    <View
        android:id="@+id/titleBoxBackground"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/title_bar"/>

    <TextView
        android:id="@+id/mainMenuTitle"
        android:layout_width="680dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/title_bar"
        android:fontFamily="sans-serif"
        android:text="@string/main_menu"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:padding="25dp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/suited_and_booted_logo" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:layout_below="@id/mainMenuTitle"
        android:layout_alignParentStart="true"
        android:background="@color/button_dark"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/menu_icon" />

    <ImageButton
        android:id="@+id/home"
        android:layout_width="130dp"
        android:layout_height="110dp"
        android:layout_below="@id/mainMenuTitle"
        android:layout_toEndOf="@id/menu"
        android:background="@color/button_dark"
        app:srcCompat="@drawable/home_icon_selected" />

    <ImageButton
        android:id="@+id/browse"
        android:layout_width="130dp"
        android:layout_height="110dp"
        android:layout_below="@id/mainMenuTitle"
        android:layout_toEndOf="@id/home"
        android:background="@color/button_light"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/browse_icon" />

    <ImageButton
        android:id="@+id/request"
        android:layout_width="130dp"
        android:layout_height="110dp"
        android:layout_below="@id/mainMenuTitle"
        android:layout_toLeftOf="@id/confirm"
        android:background="@color/button_light"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/request_icon" />

    <ImageButton
        android:id="@+id/confirm"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="130dp"
        android:layout_height="110dp"
        android:layout_below="@id/mainMenuTitle"
        android:layout_toLeftOf="@id/contact"
        android:background="@color/button_light"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/confirmation_icon" />

    <ImageButton
        android:id="@+id/contact"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="130dp"
        android:layout_height="110dp"
        android:layout_below="@id/mainMenuTitle"
        android:layout_alignParentEnd="true"
        android:background="@color/button_light"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/contact_icon" />

    <ImageButton
        android:id="@+id/help"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:background="@color/white"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/help_icon" />

    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_below="@id/mainMenuTitle"
        android:background="@color/overlay_back"
        android:visibility="gone">

        <View
            android:id="@+id/box"
            android:layout_width="130dp"
            android:layout_height="110dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/button_dark" />

        <ImageButton
            android:id="@+id/menuOverlay"
            android:layout_width="150dp"
            android:layout_height="110dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@color/button_dark"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/menu_icon" />

        <Button
            android:id="@+id/homeButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/box"
            android:layout_marginBottom="2dp"
            android:background="@color/white"
            android:text="@string/main_menu"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/button_text"
            android:textSize="28sp" />

        <Button
            android:id="@+id/browseButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/homeButton"
            android:layout_marginVertical="2dp"
            android:background="@color/white"
            android:text="@string/browse"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/button_text"
            android:textSize="28sp" />

        <Button
            android:id="@+id/requestButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/browseButton"
            android:layout_marginVertical="2dp"
            android:background="@color/white"
            android:text="@string/request"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/button_text"
            android:textSize="28sp" />

        <Button
            android:id="@+id/confirmationButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/requestButton"
            android:layout_marginVertical="2dp"
            android:background="@color/white"
            android:text="@string/confirmation"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/button_text"
            android:textSize="28sp" />

        <Button
            android:id="@+id/contactButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/confirmationButton"
            android:layout_marginVertical="2dp"
            android:background="@color/white"
            android:text="@string/contact"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/button_text"
            android:textSize="28sp" />

        <Button
            android:id="@+id/helpButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/contactButton"
            android:layout_marginVertical="2dp"
            android:background="@color/white"
            android:text="@string/help"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/button_text"
            android:textSize="28sp" />

        <Button
            android:id="@+id/settingButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/helpButton"
            android:layout_marginVertical="2dp"
            android:background="@color/white"
            android:text="@string/setting"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/button_text"
            android:textSize="28sp" />

        <View
            android:id="@+id/box2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/exitButton"
            android:layout_below="@id/settingButton"
            android:layout_marginVertical="2dp"
            android:background="@color/white" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:text="@string/exit"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/button_text"
            android:textSize="28sp" />

    </RelativeLayout>

</RelativeLayout>